--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <div id="focusDisplay" class="focus-display" style="display:none;"></div>
         <h1>🍅 Pomodoro Timer</h1>
         
+        <div id="modeAnimation" class="mode-animation"></div>
+        
         <div class="timer-display">
             <div class="time" id="time">25:00</div>
             <div class="status" id="status">Work Time</div>
